# fcsa_swagger_api

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: api.py
api/cct_config/: get_config_types.py
api/service_encoded/: service_request_encoded.py
api/status_checker/: api_check_status.py
templates/: index.html
templates/partials/: _navbar.html
tests/: TestServiceRequest.py  test_api_check_status.py
